--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=MB3DAnimationCopilot.db;version=3" providerName="System.Data.SqlClient"/>
+    <add name="Default" connectionString="Data Source=[AppDataPath]\MB3D Copilot\MB3DAnimationCopilot.db;version=3" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
   </startup>
