Additional work on the Setup project

--- a/App.config
+++ b/App.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="dbFileName" value="MB3DAnimationCopilot.db" />
+    <add key="AppDataPathSub" value="MB3D Copilot" />
+  </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=[AppDataPath]\MB3D Copilot\MB3DAnimationCopilot.db;version=3" providerName="System.Data.SqlClient"/>
+    <add name="Default" connectionString="Data Source=[AppDataPath]\[AppDataPathSub]\[dbFileName];version=3" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
   </startup>
@@ -11,5 +15,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  
 </configuration>
