Added external resource links

--- a/App.config
+++ b/App.config
@@ -3,6 +3,9 @@
   <appSettings>
     <add key="dbFileName" value="MB3DAnimationCopilot.db" />
     <add key="AppDataPathSub" value="MB3D Copilot" />
+    <add key="GithubProjectURL" value="https://github.com/PatCook1/MB3D-Animation-Copilot" />
+    <add key="PatCook1GithubURL" value="https://PatCook1.Github.io" />
+    <add key="JoyToKeyURL" value="https://JoyToKey.net/en/" />
   </appSettings>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=[AppDataPath]\[AppDataPathSub]\[dbFileName];version=3" providerName="System.Data.SqlClient"/>
