Tested and fixed Move Desginer functions and implemented error logging to txt file.

--- a/App.config
+++ b/App.config
@@ -6,6 +6,7 @@
     <add key="GithubProjectURL" value="https://github.com/PatCook1/MB3D-Animation-Copilot" />
     <add key="PatCook1GithubURL" value="https://PatCook1.Github.io" />
     <add key="JoyToKeyURL" value="https://JoyToKey.net/en/" />
+    <add key="ErrorLogFileName" value="MB3DErrorLogFile.txt" />
   </appSettings>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=[AppDataPath]\[AppDataPathSub]\[dbFileName];version=3" providerName="System.Data.SqlClient"/>
