Added functions that allow user to create a sample animation project record, with sample keyframe records and keyframe action records for review and experimentation.

--- a/App.config
+++ b/App.config
@@ -7,6 +7,7 @@
     <add key="PatCook1GithubURL" value="https://PatCook1.Github.io" />
     <add key="JoyToKeyURL" value="https://JoyToKey.net/en/" />
     <add key="ErrorLogFileName" value="MB3DErrorLogFile.txt" />
+    <add key="SampleProjectName" value="Sample Animation Project" />    
   </appSettings>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=[AppDataPath]\[AppDataPathSub]\[dbFileName];version=3" providerName="System.Data.SqlClient"/>
