Tested and updated the Export Project utility, changed application icon

--- a/App.config
+++ b/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
+    <add key="Developer" value="true" />
     <add key="dbFileName" value="MB3DAnimationCopilot.db" />
     <add key="AppDataPathSub" value="MB3D Copilot" />
     <add key="GithubProjectURL" value="https://github.com/PatCook1/MB3D-Animation-Copilot" />
