A variety of minor user interface improvements

--- a/App.config
+++ b/App.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="Developer" value="true" />
+    <add key="AppVersionDate" value="3/11/2025" />
+    <add key="Developer" value="false" />
     <add key="dbFileName" value="MB3DAnimationCopilot.db" />
     <add key="AppDataPathSub" value="MB3D Copilot" />
     <add key="GithubProjectURL" value="https://github.com/PatCook1/MB3D-Animation-Copilot" />
     <add key="PatCook1GithubURL" value="https://PatCook1.Github.io" />
-    <add key="JoyToKeyURL" value="https://JoyToKey.net/en/" />
+    <add key="JoyToKeyURL" value="https://joytokey.net/en/" />
     <add key="ErrorLogFileName" value="MB3DErrorLogFile.txt" />
     <add key="SampleProjectName" value="Sample Animation Project" />    
   </appSettings>
