Added email to author capabilitty. Also reviewed for 4/9/2025 public release.

--- a/App.config
+++ b/App.config
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="AppVersionDate" value="4/5/2025" />
+    <add key="AppVersionDate" value="4/9/2025" />
     <add key="Developer" value="false" />
     <add key="dbFileName" value="MB3DAnimationCopilot.db" />
     <add key="AppDataPathSub" value="MB3D Copilot" />
     <add key="GithubProjectURL" value="https://github.com/PatCook1/MB3D-Animation-Copilot" />
     <add key="PatCook1GithubURL" value="https://PatCook1.Github.io" />
     <add key="JoyToKeyURL" value="https://joytokey.net/en/" />
+    <add key="AuthorEmail_Feedback" value="mailto:MB3DCopilot@Outlook.com?subject=Copilot Feedback" />
+    <add key="AuthorEmail_Support" value="mailto:MB3DCopilot@Outlook.com?subject=Mandelbulb3D Animation Copilot" />
+    <add key="AuthorEmail_Error" value="mailto:MB3DCopilot@Outlook.com?subject=Copilot Error Submission" />
     <add key="ErrorLogFileName" value="MB3DErrorLogFile.txt" />
     <add key="SampleProjectName" value="Sample Animation Project" />    
   </appSettings>
